@@ -10,8 +10,11 @@
 	<li>Added two exceptions to the LGPL to support static
 	linking of applications against Mini-XML.</li>
 
+	<li>mxmlLoad*() did not detect missing > characters in
+	elements (STR #41)</li>
+
 	<li>mxmlLoad*() did not detect missing close tags at the end
-	of an XML document.</li>
+	of an XML document (STR #45)</li>
 
 	<li>Added user_data and ref_count members to mxml_node_t
 	structure.</li>
